--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "eslint": "^6.7.1",
     "eslint-plugin-react": "^7.17.0",
+    "express": "^4.17.1",
     "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
