--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "front_w_r",
+  "name": "todo_app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "10.19.0"
+  },
   "dependencies": {
     "@babel/core": "^7.7.4",
     "axios": "^0.19.0",
